Ajout d'un element out of scope

--- a/rapport_20_novembre/rapport_2.tex
+++ b/rapport_20_novembre/rapport_2.tex
@@ -67,6 +67,7 @@ The following elements are out of scope. This means that the security of these e
 
 \begin{itemize}
 \item{The physical access to the hardware, such as the power button or Ethernet cables}
+\item{The securisation of the access to the data once they are stored in the database}
 \item{The physical integrity of the hardware}
 \item{The electrical power source}
 \item{The security within the secure network, such as the presence of malwares or other viruses}
